--- a/index.html
+++ b/index.html
@@ -20,7 +20,92 @@
 
 <body>
 
-  <h1>Grid Template - our first pixel-perfect project</h1>
+  <header></header>
+
+  <main>
+
+    <section class="skills">
+      <h2 class="skills__title visually-hidden">Skills section</h2>
+
+      <div class="skills__container">
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">HTML</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">CSS</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">Markup</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">Web-Design</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">Quality Assurance</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">Codding</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">Adaptability</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">PHP</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+        <div class="skill-item">
+          <h3 class="skill-item__title">
+            <a class="skill-item__link" href="">SEO</a>
+          </h3>
+          <div class="skill-item__image"></div>
+          <div class="skill-item__overlay"></div>
+        </div>
+
+      </div>
+    </section>
+
+  </main>
+
+  <footer></footer>
 
   <!-- Подключаем библиотеку jquery, необходимую для работы нашего основного скрипта -->
   <script src="libs/jquery/dist/jquery.min.js"></script>
